# enterprise

./: .gitignore
backend/: Cargo.toml  database.db
backend/src/: args.rs  db.rs  io.rs  main.rs  server.rs  user.rs  web_server.rs
backend/src/storage/: db.rs  mod.rs  repository.rs  server.rs  user.rs
core/: Cargo.toml  README.md
core/src/: args.rs  main.rs
core/src/rpc/: method.rs  middleware.rs  mod.rs
core/src/vpn/: mod.rs
desktop/: README.md  package.json  tsconfig.json  vite.config.ts
desktop/src/: main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/app/: App.svelte  App.vue  _colors.scss  _variables.scss  styles.scss
desktop/src/features/Auth/: Auth.svelte  index.ts
desktop/src/features/LanguageSwitcher/: LanguageSwitcher.vue  config.ts  lib.ts  model.ts
desktop/src/features/Setup/: Setup.svelte
desktop/src/features/ThemeSwitcher/: ThemeSwitcher.vue  config.ts
desktop/src/pages/Server/: index.ts
desktop/src/pages/Servers/: Servers.svelte  index.ts
desktop/src/pages/Setup/: Setup.svelte  index.ts
desktop/src/shared/api/: base.ts
desktop/src/shared/assets/: logo.svelte
desktop/src/shared/assets/icons/: ChevronDown.vue  Moon.vue  Sun.vue  index.ts
desktop/src/shared/lib/: location.ts
desktop/src/shared/lib/forms/: validators.ts
desktop/src/shared/lib/i18n/: be.json  en.json  index.ts  messages.ts
desktop/src/shared/ui/Button/: Button.vue  ButtonDrip.vue  model.ts
desktop/src/widgets/Header/: Header.svelte
(+5 files in other folders)
