[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "depn"
path = "src/main.rs"

[dependencies]
rusqlite = "0.24.0"
bcrypt = "0.11.0"
clap = { version = "4.3.0", features = ["derive"] }
nix = "0.26.2"
prettytable = "0.10.0"
actix-web = "4.3.1"
futures-util = "0.3.28"
base64 = "0.21.2"
actix-web-httpauth = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
