[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Uladzislau Valakitsin <v.volokitty@gmail.com>"]

[[bin]]
name = "depn-tools"
path = "src/tools/main.rs"

[[bin]]
name = "depn-core"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-derive= "18.0.0"
